2016/fl2016/09-161026/adv2/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | toplevel_dec_chain SEMISEMI
   3           | LET REC rec_dec SEMISEMI
   4           | SEMISEMI
   5           | SHARP QUIT SEMISEMI

   6  toplevel_dec_chain : dec
   7                     | dec toplevel_dec_chain

   8  arg : EQ expr
   9      | var arg

  10  dec : LET var arg
  11      | LET var arg dec_and

  12  dec_and : AND var arg
  13          | AND var arg dec_and

  14  rec_dec : var var arg
  15          | var var arg AND rec_dec

  16  expr : dec IN expr
  17       | LET REC rec_dec IN expr
  18       | LET WILDCARD EQ expr IN expr
  19       | expr SEMI expr
  20       | IF expr THEN expr ELSE expr
  21       | FUN fun_expr
  22       | expr EQ expr
  23       | expr LT expr
  24       | arith_expr
  25       | bool_expr
  26       | MATCH expr WITH cases
  27       | MATCH expr WITH BAR cases
  28       | list_expr
  29       | expr ASSIGN expr
  30       | WHILE expr DO expr DONE
  31       | FOR var EQ expr TO expr DO expr DONE

  32  list_expr : expr CONS expr

  33  fun_expr : var ARROW expr
  34           | var fun_expr

  35  arith_expr : arith_expr PLUS factor_expr
  36             | arith_expr MINUS factor_expr
  37             | factor_expr

  38  bool_expr : expr LAND expr
  39            | expr LOR expr

  40  factor_expr : factor_expr TIMES app_expr
  41              | factor_expr DIV app_expr
  42              | app_expr

  43  app_expr : app_expr atomic_expr
  44           | EXCLAMATION atomic_expr
  45           | atomic_expr

  46  atomic_expr : INT
  47              | BOOL
  48              | ID
  49              | LPAR expr RPAR
  50              | LPAR RPAR
  51              | LBRACKET list_rec
  52              | LBRACKET RBRACKET
  53              | LPAR expr COMMA expr RPAR

  54  list_rec : expr RBRACKET
  55           | expr SEMI list_rec

  56  var : ID

  57  cases : pattern ARROW expr
  58        | pattern ARROW expr BAR cases

  59  pattern : atomic_pattern CONS pattern
  60          | atomic_pattern

  61  atomic_pattern : INT
  62                 | BOOL
  63                 | var
  64                 | WILDCARD
  65                 | LPAR pattern COMMA pattern RPAR
  66                 | LBRACKET RBRACKET
  67                 | LPAR pattern RPAR

  68  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (68)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 6
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	SEMISEMI  shift 11
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	SHARP  shift 16
	.  error

	toplevel  goto 17
	expr  goto 18
	toplevel_dec_chain  goto 19
	dec  goto 20
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	atomic_expr : INT .  (46)

	.  reduce 46


state 4
	atomic_expr : BOOL .  (47)

	.  reduce 47


state 5
	atomic_expr : ID .  (48)

	.  reduce 48


state 6
	toplevel : LET . REC rec_dec SEMISEMI  (3)
	dec : LET . var arg  (10)
	dec : LET . var arg dec_and  (11)
	expr : LET . REC rec_dec IN expr  (17)
	expr : LET . WILDCARD EQ expr IN expr  (18)

	ID  shift 27
	REC  shift 28
	WILDCARD  shift 29
	.  error

	var  goto 30


state 7
	expr : IF . expr THEN expr ELSE expr  (20)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 32
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 8
	atomic_expr : LPAR . expr RPAR  (49)
	atomic_expr : LPAR . RPAR  (50)
	atomic_expr : LPAR . expr COMMA expr RPAR  (53)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	RPAR  shift 34
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 35
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 9
	atomic_expr : LBRACKET . list_rec  (51)
	atomic_expr : LBRACKET . RBRACKET  (52)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	RBRACKET  shift 36
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 37
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26
	list_rec  goto 38


state 10
	expr : MATCH . expr WITH cases  (26)
	expr : MATCH . expr WITH BAR cases  (27)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 39
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 11
	toplevel : SEMISEMI .  (4)

	.  reduce 4


state 12
	expr : FUN . fun_expr  (21)

	ID  shift 27
	.  error

	var  goto 40
	fun_expr  goto 41


state 13
	expr : FOR . var EQ expr TO expr DO expr DONE  (31)

	ID  shift 27
	.  error

	var  goto 42


state 14
	expr : WHILE . expr DO expr DONE  (30)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 43
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 15
	app_expr : EXCLAMATION . atomic_expr  (44)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 9
	.  error

	atomic_expr  goto 44


state 16
	toplevel : SHARP . QUIT SEMISEMI  (5)

	QUIT  shift 45
	.  error


state 17
	%entry% : '\001' toplevel .  (68)

	.  reduce 68


state 18
	toplevel : expr . SEMISEMI  (1)
	expr : expr . SEMI expr  (19)
	expr : expr . EQ expr  (22)
	expr : expr . LT expr  (23)
	expr : expr . ASSIGN expr  (29)
	list_expr : expr . CONS expr  (32)
	bool_expr : expr . LAND expr  (38)
	bool_expr : expr . LOR expr  (39)

	LAND  shift 46
	LOR  shift 47
	EQ  shift 48
	LT  shift 49
	CONS  shift 50
	SEMI  shift 51
	SEMISEMI  shift 52
	ASSIGN  shift 53
	.  error


state 19
	toplevel : toplevel_dec_chain . SEMISEMI  (2)

	SEMISEMI  shift 54
	.  error


state 20
	toplevel_dec_chain : dec .  (6)
	toplevel_dec_chain : dec . toplevel_dec_chain  (7)
	expr : dec . IN expr  (16)

	LET  shift 55
	IN  shift 56
	SEMISEMI  reduce 6

	toplevel_dec_chain  goto 57
	dec  goto 58


state 21
	expr : arith_expr .  (24)
	arith_expr : arith_expr . PLUS factor_expr  (35)
	arith_expr : arith_expr . MINUS factor_expr  (36)

	PLUS  shift 59
	MINUS  shift 60
	LET  reduce 24
	IN  reduce 24
	AND  reduce 24
	LAND  reduce 24
	LOR  reduce 24
	EQ  reduce 24
	LT  reduce 24
	THEN  reduce 24
	ELSE  reduce 24
	RPAR  reduce 24
	RBRACKET  reduce 24
	CONS  reduce 24
	COMMA  reduce 24
	SEMI  reduce 24
	WITH  reduce 24
	BAR  reduce 24
	SEMISEMI  reduce 24
	DO  reduce 24
	DONE  reduce 24
	TO  reduce 24
	ASSIGN  reduce 24


state 22
	expr : bool_expr .  (25)

	.  reduce 25


state 23
	expr : list_expr .  (28)

	.  reduce 28


state 24
	arith_expr : factor_expr .  (37)
	factor_expr : factor_expr . TIMES app_expr  (40)
	factor_expr : factor_expr . DIV app_expr  (41)

	TIMES  shift 61
	DIV  shift 62
	LET  reduce 37
	IN  reduce 37
	AND  reduce 37
	PLUS  reduce 37
	MINUS  reduce 37
	LAND  reduce 37
	LOR  reduce 37
	EQ  reduce 37
	LT  reduce 37
	THEN  reduce 37
	ELSE  reduce 37
	RPAR  reduce 37
	RBRACKET  reduce 37
	CONS  reduce 37
	COMMA  reduce 37
	SEMI  reduce 37
	WITH  reduce 37
	BAR  reduce 37
	SEMISEMI  reduce 37
	DO  reduce 37
	DONE  reduce 37
	TO  reduce 37
	ASSIGN  reduce 37


state 25
	factor_expr : app_expr .  (42)
	app_expr : app_expr . atomic_expr  (43)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 9
	LET  reduce 42
	IN  reduce 42
	AND  reduce 42
	PLUS  reduce 42
	TIMES  reduce 42
	MINUS  reduce 42
	DIV  reduce 42
	LAND  reduce 42
	LOR  reduce 42
	EQ  reduce 42
	LT  reduce 42
	THEN  reduce 42
	ELSE  reduce 42
	RPAR  reduce 42
	RBRACKET  reduce 42
	CONS  reduce 42
	COMMA  reduce 42
	SEMI  reduce 42
	WITH  reduce 42
	BAR  reduce 42
	SEMISEMI  reduce 42
	DO  reduce 42
	DONE  reduce 42
	TO  reduce 42
	ASSIGN  reduce 42

	atomic_expr  goto 63


state 26
	app_expr : atomic_expr .  (45)

	.  reduce 45


state 27
	var : ID .  (56)

	.  reduce 56


state 28
	toplevel : LET REC . rec_dec SEMISEMI  (3)
	expr : LET REC . rec_dec IN expr  (17)

	ID  shift 27
	.  error

	rec_dec  goto 64
	var  goto 65


state 29
	expr : LET WILDCARD . EQ expr IN expr  (18)

	EQ  shift 66
	.  error


state 30
	dec : LET var . arg  (10)
	dec : LET var . arg dec_and  (11)

	ID  shift 27
	EQ  shift 67
	.  error

	arg  goto 68
	var  goto 69


state 31
	dec : LET . var arg  (10)
	dec : LET . var arg dec_and  (11)
	expr : LET . REC rec_dec IN expr  (17)
	expr : LET . WILDCARD EQ expr IN expr  (18)

	ID  shift 27
	REC  shift 70
	WILDCARD  shift 29
	.  error

	var  goto 30


state 32
	expr : expr . SEMI expr  (19)
	expr : IF expr . THEN expr ELSE expr  (20)
	expr : expr . EQ expr  (22)
	expr : expr . LT expr  (23)
	expr : expr . ASSIGN expr  (29)
	list_expr : expr . CONS expr  (32)
	bool_expr : expr . LAND expr  (38)
	bool_expr : expr . LOR expr  (39)

	LAND  shift 46
	LOR  shift 47
	EQ  shift 48
	LT  shift 49
	THEN  shift 71
	CONS  shift 50
	SEMI  shift 51
	ASSIGN  shift 53
	.  error


state 33
	expr : dec . IN expr  (16)

	IN  shift 56
	.  error


state 34
	atomic_expr : LPAR RPAR .  (50)

	.  reduce 50


state 35
	expr : expr . SEMI expr  (19)
	expr : expr . EQ expr  (22)
	expr : expr . LT expr  (23)
	expr : expr . ASSIGN expr  (29)
	list_expr : expr . CONS expr  (32)
	bool_expr : expr . LAND expr  (38)
	bool_expr : expr . LOR expr  (39)
	atomic_expr : LPAR expr . RPAR  (49)
	atomic_expr : LPAR expr . COMMA expr RPAR  (53)

	LAND  shift 46
	LOR  shift 47
	EQ  shift 48
	LT  shift 49
	RPAR  shift 72
	CONS  shift 50
	COMMA  shift 73
	SEMI  shift 51
	ASSIGN  shift 53
	.  error


state 36
	atomic_expr : LBRACKET RBRACKET .  (52)

	.  reduce 52


state 37
	expr : expr . SEMI expr  (19)
	expr : expr . EQ expr  (22)
	expr : expr . LT expr  (23)
	expr : expr . ASSIGN expr  (29)
	list_expr : expr . CONS expr  (32)
	bool_expr : expr . LAND expr  (38)
	bool_expr : expr . LOR expr  (39)
	list_rec : expr . RBRACKET  (54)
	list_rec : expr . SEMI list_rec  (55)

	LAND  shift 46
	LOR  shift 47
	EQ  shift 48
	LT  shift 49
	RBRACKET  shift 74
	CONS  shift 50
	SEMI  shift 75
	ASSIGN  shift 53
	.  error


state 38
	atomic_expr : LBRACKET list_rec .  (51)

	.  reduce 51


state 39
	expr : expr . SEMI expr  (19)
	expr : expr . EQ expr  (22)
	expr : expr . LT expr  (23)
	expr : MATCH expr . WITH cases  (26)
	expr : MATCH expr . WITH BAR cases  (27)
	expr : expr . ASSIGN expr  (29)
	list_expr : expr . CONS expr  (32)
	bool_expr : expr . LAND expr  (38)
	bool_expr : expr . LOR expr  (39)

	LAND  shift 46
	LOR  shift 47
	EQ  shift 48
	LT  shift 49
	CONS  shift 50
	SEMI  shift 51
	WITH  shift 76
	ASSIGN  shift 53
	.  error


state 40
	fun_expr : var . ARROW expr  (33)
	fun_expr : var . fun_expr  (34)

	ID  shift 27
	ARROW  shift 77
	.  error

	var  goto 40
	fun_expr  goto 78


state 41
	expr : FUN fun_expr .  (21)

	.  reduce 21


state 42
	expr : FOR var . EQ expr TO expr DO expr DONE  (31)

	EQ  shift 79
	.  error


state 43
	expr : expr . SEMI expr  (19)
	expr : expr . EQ expr  (22)
	expr : expr . LT expr  (23)
	expr : expr . ASSIGN expr  (29)
	expr : WHILE expr . DO expr DONE  (30)
	list_expr : expr . CONS expr  (32)
	bool_expr : expr . LAND expr  (38)
	bool_expr : expr . LOR expr  (39)

	LAND  shift 46
	LOR  shift 47
	EQ  shift 48
	LT  shift 49
	CONS  shift 50
	SEMI  shift 51
	DO  shift 80
	ASSIGN  shift 53
	.  error


state 44
	app_expr : EXCLAMATION atomic_expr .  (44)

	.  reduce 44


state 45
	toplevel : SHARP QUIT . SEMISEMI  (5)

	SEMISEMI  shift 81
	.  error


state 46
	bool_expr : expr LAND . expr  (38)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 82
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 47
	bool_expr : expr LOR . expr  (39)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 83
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 48
	expr : expr EQ . expr  (22)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 84
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 49
	expr : expr LT . expr  (23)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 85
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 50
	list_expr : expr CONS . expr  (32)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 86
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 51
	expr : expr SEMI . expr  (19)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 87
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 52
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 53
	expr : expr ASSIGN . expr  (29)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 88
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 54
	toplevel : toplevel_dec_chain SEMISEMI .  (2)

	.  reduce 2


state 55
	dec : LET . var arg  (10)
	dec : LET . var arg dec_and  (11)

	ID  shift 27
	.  error

	var  goto 30


state 56
	expr : dec IN . expr  (16)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 89
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 57
	toplevel_dec_chain : dec toplevel_dec_chain .  (7)

	.  reduce 7


state 58
	toplevel_dec_chain : dec .  (6)
	toplevel_dec_chain : dec . toplevel_dec_chain  (7)

	LET  shift 55
	SEMISEMI  reduce 6

	toplevel_dec_chain  goto 57
	dec  goto 58


state 59
	arith_expr : arith_expr PLUS . factor_expr  (35)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 9
	EXCLAMATION  shift 15
	.  error

	factor_expr  goto 90
	app_expr  goto 25
	atomic_expr  goto 26


state 60
	arith_expr : arith_expr MINUS . factor_expr  (36)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 9
	EXCLAMATION  shift 15
	.  error

	factor_expr  goto 91
	app_expr  goto 25
	atomic_expr  goto 26


state 61
	factor_expr : factor_expr TIMES . app_expr  (40)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 9
	EXCLAMATION  shift 15
	.  error

	app_expr  goto 92
	atomic_expr  goto 26


state 62
	factor_expr : factor_expr DIV . app_expr  (41)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LPAR  shift 8
	LBRACKET  shift 9
	EXCLAMATION  shift 15
	.  error

	app_expr  goto 93
	atomic_expr  goto 26


state 63
	app_expr : app_expr atomic_expr .  (43)

	.  reduce 43


state 64
	toplevel : LET REC rec_dec . SEMISEMI  (3)
	expr : LET REC rec_dec . IN expr  (17)

	IN  shift 94
	SEMISEMI  shift 95
	.  error


state 65
	rec_dec : var . var arg  (14)
	rec_dec : var . var arg AND rec_dec  (15)

	ID  shift 27
	.  error

	var  goto 96


state 66
	expr : LET WILDCARD EQ . expr IN expr  (18)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 97
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 67
	arg : EQ . expr  (8)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 98
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 68
	dec : LET var arg .  (10)
	dec : LET var arg . dec_and  (11)

	AND  shift 99
	LET  reduce 10
	IN  reduce 10
	SEMISEMI  reduce 10

	dec_and  goto 100


state 69
	arg : var . arg  (9)

	ID  shift 27
	EQ  shift 67
	.  error

	arg  goto 101
	var  goto 69


state 70
	expr : LET REC . rec_dec IN expr  (17)

	ID  shift 27
	.  error

	rec_dec  goto 102
	var  goto 65


state 71
	expr : IF expr THEN . expr ELSE expr  (20)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 103
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 72
	atomic_expr : LPAR expr RPAR .  (49)

	.  reduce 49


state 73
	atomic_expr : LPAR expr COMMA . expr RPAR  (53)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 104
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 74
	list_rec : expr RBRACKET .  (54)

	.  reduce 54


state 75
	expr : expr SEMI . expr  (19)
	list_rec : expr SEMI . list_rec  (55)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 105
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26
	list_rec  goto 106


state 76
	expr : MATCH expr WITH . cases  (26)
	expr : MATCH expr WITH . BAR cases  (27)

	INT  shift 107
	BOOL  shift 108
	ID  shift 27
	LPAR  shift 109
	LBRACKET  shift 110
	BAR  shift 111
	WILDCARD  shift 112
	.  error

	var  goto 113
	cases  goto 114
	pattern  goto 115
	atomic_pattern  goto 116


state 77
	fun_expr : var ARROW . expr  (33)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 117
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 78
	fun_expr : var fun_expr .  (34)

	.  reduce 34


state 79
	expr : FOR var EQ . expr TO expr DO expr DONE  (31)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 118
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 80
	expr : WHILE expr DO . expr DONE  (30)

	INT  shift 3
	BOOL  shift 4
	ID  shift 5
	LET  shift 31
	IF  shift 7
	LPAR  shift 8
	LBRACKET  shift 9
	MATCH  shift 10
	FUN  shift 12
	FOR  shift 13
	WHILE  shift 14
	EXCLAMATION  shift 15
	.  error

	expr  goto 119
	dec  goto 33
	arith_expr  goto 21
	bool_expr  goto 22
	list_expr  goto 23
	factor_expr  goto 24
	app_expr  goto 25
	atomic_expr  goto 26


state 81
	toplevel : SHARP QUIT SEMISEMI .  (5)

	.  reduce 5


state 82
	expr : expr . SEMI expr  (19)
	expr : expr . EQ expr  (22)
	expr : expr . LT expr  (23)
	expr : expr . ASSIGN expr  (29)
	list_expr : expr . CONS expr  (32)
	bool_expr : expr . LAND expr  (38)
	bool_expr : expr LAND expr .  (38)
	bool_expr : expr . LOR expr  (39)

	EQ  shift 48
	LT  shift 49
	LET  reduce 38
	IN  reduce 38
	AND  reduce 38
	LAND  reduce 38
	LOR  reduce 38
	THEN  reduce 38
	ELSE  reduce 38
	RPAR  reduce 38
	RBRACKET  reduce 38
	CONS  reduce 38
	COMMA  reduce 38
	SEMI  reduce 38
	WITH  reduce 38
	BAR  reduce 38
	SEMISEMI  reduce 38
	DO  reduce 38
	DONE  reduce 38
	TO  reduce 38
	ASSIGN  reduce 38


state 83
	expr : expr . SEMI expr  (19)
	expr : expr . EQ expr  (22)
	expr : expr . LT expr  (23)
	expr : expr . ASSIGN expr  (29)
	list_expr : expr . CONS expr  (32)
	bool_expr : expr . LAND expr  (38)
	bool_expr : expr . LOR expr  (39)
	bool_expr : expr LOR expr .  (39)

	LAND  shift 46
	EQ  shift 48
	LT  shift 49
	LET  reduce 39
	IN  reduce 39
	AND  reduce 39
	LOR  reduce 39
	THEN  reduce 39
	ELSE  reduce 39
	RPAR  reduce 39
	RBRACKET  reduce 39
	CONS  reduce 39
	COMMA  reduce 39
	SEMI  reduce 39
	WITH  reduce 39
	BAR  reduce 39
	SEMISEMI  reduce 39
	DO  reduce 39
	DONE  reduce 39
	TO  reduce 39
	ASSIGN  reduce 39


state 84
	expr : expr . SEMI expr  (19)
	expr : expr . EQ expr  (22)
	expr : expr EQ expr .  (22)
	expr : expr . LT expr  (23)
	expr : expr . ASSIGN expr  (29)
	list_expr : expr . CONS expr  (32)
	bool_expr : expr . LAND expr  (38)
	bool_expr : expr . LOR expr  (39)

	.  reduce 22


state 85
	expr : expr . SEMI expr  (19)
	expr : expr . EQ expr  (22)
	expr : expr . LT expr  (23)
	expr : expr LT expr .  (23)
	expr : expr . ASSIGN expr  (29)
	list_expr : expr . CONS expr  (32)
	bool_expr : expr . LAND expr  (38)
	bool_expr : expr . LOR expr  (39)

	.  reduce 23


state 86
	expr : expr . SEMI expr  (19)
	expr : expr . EQ expr  (22)
	expr : expr . LT expr  (23)
	expr : expr . ASSIGN expr  (29)
	list_expr : expr . CONS expr  (32)
	list_expr : expr CONS expr .  (32)
	bool_expr : expr . LAND expr  (38)
	bool_expr : expr . LOR expr  (39)

	LAND  shift 46
	LOR  shift 47
	EQ  shift 48
	LT  shift 49
	CONS  shift 50
	SEMI  shift 51
	ASSIGN  shift 53
	LET  reduce 32
	IN  reduce 32
	AND  reduce 32
	THEN  reduce 32
	ELSE  reduce 32
	RPAR  reduce 32
	RBRACKET  reduce 32
	COMMA  reduce 32
	WITH  reduce 32
	BAR  reduce 32
	SEMISEMI  reduce 32
	DO  reduce 32
	DONE  reduce 32
	TO  reduce 32


state 87
	expr : expr . SEMI expr  (19)
	expr : expr SEMI expr .  (19)
	expr : expr . EQ expr  (22)
	expr : expr . LT expr  (23)
	expr : expr . ASSIGN expr  (29)
	list_expr : expr . CONS expr  (32)
	bool_expr : expr . LAND expr  (38)
	bool_expr : expr . LOR expr  (39)

	LAND  shift 46
	LOR  shift 47
	EQ  shift 48
	LT  shift 49
	SEMI  shift 51
	ASSIGN  shift 53
	LET  reduce 19
	IN  reduce 19
	AND  reduce 19
	THEN  reduce 19
	ELSE  reduce 19
	RPAR  reduce 19
	RBRACKET  reduce 19
	CONS  reduce 19
	COMMA  reduce 19
	WITH  reduce 19
	BAR  reduce 19
	SEMISEMI  reduce 19
	DO  reduce 19
	DONE  reduce 19
	TO  reduce 19

